# wavetangle

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
spec/: architecture.md
src/: audio.rs  config.rs  dsp.rs  effect_processor.rs  graph.rs  main.rs  nodes.rs  pipeline.rs  project.rs  viewer.rs
src/dsp/: biquad.rs  compressor.rs  graphic_eq.rs  interpolation.rs  mod.rs  pitch_shifter.rs  spectrum.rs  td_psola.rs  yin.rs
src/nodes/: analyzer.rs  effects.rs  io.rs  math.rs  mod.rs
