[package]
name = "wavetangle"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.16.0"
eframe = "0.33.0"
egui = "0.33.2"
egui-snarl = { version = "0.9.0", features = ["serde"] }
egui_plot = "0.34"
parking_lot = "0.12"
rfd = "0.15"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
